# rppg-rust

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  pipeline.rs  rppg_types.rs  types.rs  video.rs
src/algorithms/: chrom.rs  green.rs  mod.rs  pos.rs  traits.rs  utils.rs
src/face/: mod.rs  traits.rs
src/rppg_algorithms/: chrom.rs  green.rs  mod.rs  pos.rs  traits.rs  utils.rs
src/video/: mod.rs  opencv_backend.rs  traits.rs  video_rs_backend.rs
