[package]
name = "rppg"
version = "0.1.0"
authors = ["Bhargav Acharya <bacharya@techfak.uni-bielefeld.de>"]
edition = "2021"

[dependencies]
opencv = {version = "0.94.4" ,features = ["clang-runtime"] }
ndarray = "0.16.1"
rustfft = "6.1"
log = "0.4"
env_logger = "0.10"
flume = "0.10.14"
once_cell = "1.16.0"
color-eyre = "0.6.2"
sci-rs = "0.4.1"
faer = "0.21"
biquad = "0.5.0"
num-complex = "0.4"
textplots = "0.8"
video-rs = { version = "0.10", features = ["ndarray"] }

[features]
default = ["nokhwa/default"]


[dependencies.ggez]
version = "0.8.1"
default-features = false

[dependencies.clap]
version = "4.0.20"
features = ["derive"]

# Use these as you need
[dependencies.nokhwa]
version = "0.10.7"
features = ["input-native", "output-threaded"]

[dependencies.image]
version = "0.24.5"
features = ["png"]
